--- a/AdminPortal/src/main/webapp/WEB-INF/web.xml
+++ b/AdminPortal/src/main/webapp/WEB-INF/web.xml
@@ -52,6 +52,12 @@
   	<description></description>
   	<servlet-class>adminportal.controller.DeleteSubjectCtl</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>UpdateStudentListCtl</servlet-name>
+  	<display-name>UpdateStudentListCtl</display-name>
+  	<description></description>
+  	<servlet-class>adminportal.controller.UpdateStudentListCtl</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>UsersRegistrationAction</servlet-name>
   	<url-pattern>/UsersRegistrationAction</url-pattern>
@@ -83,5 +89,9 @@
   <servlet-mapping>
   	<servlet-name>DeleteSubjectCtl</servlet-name>
   	<url-pattern>/DeleteSubjectCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>UpdateStudentListCtl</servlet-name>
+  	<url-pattern>/UpdateStudentListCtl</url-pattern>
   </servlet-mapping>
 </web-app>
