--- a/AdminPortal/src/main/webapp/WEB-INF/web.xml
+++ b/AdminPortal/src/main/webapp/WEB-INF/web.xml
@@ -76,6 +76,24 @@
   	<description></description>
   	<servlet-class>adminportal.controller.UpdateTeacherListCtl</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>AddClassCtl</servlet-name>
+  	<display-name>AddClassCtl</display-name>
+  	<description></description>
+  	<servlet-class>adminportal.controller.AddClassCtl</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>UpdateClassListCtl</servlet-name>
+  	<display-name>UpdateClassListCtl</display-name>
+  	<description></description>
+  	<servlet-class>adminportal.controller.UpdateClassListCtl</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>DeleteClassCtl</servlet-name>
+  	<display-name>DeleteClassCtl</display-name>
+  	<description></description>
+  	<servlet-class>adminportal.controller.DeleteClassCtl</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>UsersRegistrationAction</servlet-name>
   	<url-pattern>/UsersRegistrationAction</url-pattern>
@@ -123,5 +141,17 @@
   <servlet-mapping>
   	<servlet-name>UpdateTeacherListCtl</servlet-name>
   	<url-pattern>/UpdateTeacherListCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AddClassCtl</servlet-name>
+  	<url-pattern>/AddClassCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>UpdateClassListCtl</servlet-name>
+  	<url-pattern>/UpdateClassListCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>DeleteClassCtl</servlet-name>
+  	<url-pattern>/DeleteClassCtl</url-pattern>
   </servlet-mapping>
 </web-app>
