--- a/AdminPortal/src/main/webapp/WEB-INF/web.xml
+++ b/AdminPortal/src/main/webapp/WEB-INF/web.xml
@@ -100,6 +100,18 @@
   	<description></description>
   	<servlet-class>adminportal.controller.AssignClassesCtl</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>AssignClassCtl</servlet-name>
+  	<display-name>AssignClassCtl</display-name>
+  	<description></description>
+  	<servlet-class>adminportal.controller.AssignClassCtl</servlet-class>
+  </servlet>
+  <servlet>
+  	<servlet-name>AssignTeacherCtl</servlet-name>
+  	<display-name>AssignTeacherCtl</display-name>
+  	<description></description>
+  	<servlet-class>adminportal.controller.AssignTeacherCtl</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>UsersRegistrationAction</servlet-name>
   	<url-pattern>/UsersRegistrationAction</url-pattern>
@@ -163,5 +175,13 @@
   <servlet-mapping>
   	<servlet-name>AssignClassesCtl</servlet-name>
   	<url-pattern>/AssignClassesCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AssignClassCtl</servlet-name>
+  	<url-pattern>/AssignClassCtl</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>AssignTeacherCtl</servlet-name>
+  	<url-pattern>/AssignTeacherCtl</url-pattern>
   </servlet-mapping>
 </web-app>
